<resources>
    <string name="app_name">My Food</string>
    <string name="detail_customer">Detail Customer:</string>
    <string name="pilih_pesanan">Pilih Pesanan</string>
    <string name="no_meja">No Meja:</string>
    <string name="nama_nim">Elviera Mahayati Haris_1202152335</string>
    <string name="identitas_pemesanan">Identitas Pemesanan:</string>
    <string name="nameCustomer">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="note">Note</string>
    <string name="pilih_pesanan1">Pilih Pesanan</string>
    <string name="pilihMenu">Pilih Menu:</string>
    <string name="dine_in">Dine In</string>
    <string name="take_away">Take Away</string>
    <string name="pesanSekarang">Pesan Sekarang</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="komposisi_cheesebayam">Bayam, Keju, Susu</string>


    <string-array name="labels_array">
        <item>Meja 1</item>
        <item>Meja 2</item>
        <item>Meja 3</item>
        <item>Meja 4</item>
        <item>Meja 5</item>
    </string-array>

</resources>
